--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,12 @@ jobs:
       - run:
           name: test
           command: npm test
+  deploy:
+    machine:
+      enabled: true
+    steps:
+      - setup_remote_docker
+      - checkout
       - run:
           name: build image
           command: |
@@ -32,3 +38,12 @@ jobs:
             echo $HEROKU_API_KEY | docker login --username=$HEROKU_USERNAME --password-stdin registry.heroku.com
             docker tag latest registry.heroku.com/$HEROKU_APP_NAME/web
             docker push registry.heroku.com/$HEROKU_APP_NAME/web
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
