--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           name: build image
           command: |
             docker info
-            docker build -t latest
+            docker build -t latest .
 
       - run:
           name: deploy to heroku
