--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,21 @@ jobs:
             docker build -t latest .
 
       - run:
-          name: deploy to heroku
+          name: push image to heroku
           command: |
             echo $HEROKU_API_KEY | docker login --username=$HEROKU_USERNAME --password-stdin registry.heroku.com
             docker tag latest registry.heroku.com/$HEROKU_APP_NAME/web
             docker push registry.heroku.com/$HEROKU_APP_NAME/web
+      - run:
+          name: Setup Heroku
+          command: |
+            chmod +x .circleci/setup-heroku.sh
+            .circleci/setup-heroku.sh
+
+      - run:
+          name: Deploy to Heroku
+          command: |
+            heroku container:release web --app $HEROKU_APP_NAME
 
 workflows:
   version: 2
